--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
   <link href="https://fonts.googleapis.com/css?family=Roboto&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
   
-</head>
+<link rel="stylesheet" href="styles.1581108a986f34f9b9e5.css"></head>
 <body>
   <app-root></app-root>
-</body>
+<script type="text/javascript" src="runtime.6df3691585a537554f59.js"></script><script type="text/javascript" src="es2015-polyfills.cda01ff7041101db831a.js" nomodule></script><script type="text/javascript" src="polyfills.481858ef51fe27531859.js"></script><script type="text/javascript" src="main.710af7b629a1807efd04.js"></script></body>
 </html>
