--- a/index.html
+++ b/index.html
@@ -8,10 +8,10 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
   <link href="https://fonts.googleapis.com/css?family=Roboto&display=swap" rel="stylesheet">
-  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
+  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
   
 <link rel="stylesheet" href="styles.1581108a986f34f9b9e5.css"></head>
 <body>
   <app-root></app-root>
-<script type="text/javascript" src="runtime.06495b1301947c573723.js"></script><script type="text/javascript" src="es2015-polyfills.cda01ff7041101db831a.js" nomodule></script><script type="text/javascript" src="polyfills.481858ef51fe27531859.js"></script><script type="text/javascript" src="main.535971c94e3bc6d4c666.js"></script></body>
+<script type="text/javascript" src="runtime.bf00c0e9c715a90d4eb8.js"></script><script type="text/javascript" src="es2015-polyfills.cda01ff7041101db831a.js" nomodule></script><script type="text/javascript" src="polyfills.481858ef51fe27531859.js"></script><script type="text/javascript" src="main.b3766a7b2d275af9eaf7.js"></script></body>
 </html>
